--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <header>
                 <h1>Get in Touch With Me</h1>
             </header>
-            <div id="outer-div">
+            <div id="outer-div"> <!-- This element, as well as the vertical elements, are used for flex positioning all the sub-container divs in this document. -->
                 <div id="telephone-messaging-vertical">
                     <div id="telephone" class="text-block clippable">
                         <p> The best way to call me is unfortunately not via my phone number because there is an issue with my voicemail carrier for calls at the moment.
@@ -67,7 +67,7 @@
                         </p>
                     </div>
                 </div>
-                <div id="other-nav-vertical">
+                <div id="other-nav-vertical"> <!-- The container for vertically flexing the accounts table, navbar, and availability sections. -->
                     <div id="other-accounts">
                         <table id="other-accounts-table">
                             <colgroup>
@@ -82,7 +82,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td> <!-- These entries may seem to be indented a ittle strangely. I tabbed these inline elements for readability.-->
+                                    <td> <!-- I tabbed the account name column's cells for readability; a one-liner for these would be too long. -->
                                         <a href="https://github.com" class="force-no-decoration link" target="_blank">
                                             <img src="resources/images/icons/github-icon.png" class="inlined-image-container" width="25" height="25" alt="GitHub Icon">
                                         </a> GitHub
@@ -124,7 +124,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div id="misc-nav-horizontal">
+                    <div id="availability-nav-horizontal"> <!-- The container for horizontally flexing the navbar and availability sections. -->
                         <p class="hidden"><a href="#start-content">Skip Navigation</a></p>
                         <nav id="navbar">
                             <a href="index.html" target="_self"><p>Back to Cover Page</p></a>
