--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
             <h1>Portfolio</h1>
         </header>
         <div id="outer-div">
+            <!-- Each vertical div is a container for two portfolio elements (or the navbar) flexed vertically; These are then grouped together in the outer-div and flexed horizontally.-->
             <div class="vertical-div">
                 <div class="portfolio-unit" id="subnettergui">
                     <p class="clippable portfolio-name-header">
@@ -79,7 +80,7 @@
                     <p class="clippable">A more robust version of the C CLI-based subnet calculator, re-written in C++.</p>
                     <a target="_blank" href="https://github.com/rsmaller/subnetterplusplus" class="link clippable"><p class="portfolio-link">Access Subnetter++.</p></a>
                 </div>
-                <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p>
+                <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p> <!-- There is nothing after navigation. Wraps around to start. -->
                 <nav id="navbar"  class="clippable">
                     <a href="index.html" target="_self"><p>Back to Cover Page</p></a>
                     <a href="resume.html" target="_self"><p>Resume</p></a>
