Updated navbar and footer to show more color when hovered over for visibility

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <img src="resources/images/collage/collage5.jpg" width="290" alt="An Ubuntu Virtual Machine I Customized">
                     </div>
                 </div>
-                <footer>
+                <footer id="footer-nav">
                     <a href="contact.html" class="link force-no-decoration" target="_self"><h1>Contact Me</h1></a>
                 </footer>
             </div>
