--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <h1>Ryan Smaller - IT B.S.</h1>
                 </header>
                 <div id="body-div"> <!-- Everything minus the header and footer; those are excluded to prevent them from being flexed in unusual fashion. -->
-                    <div id="my-story" class="clippable">
+                    <div id="my-story" class="scrollable">
                         <h4>My Story</h4>
-                        <p> My journey as an IT student started when I was roughly 8 years old. I had an ancient Toshiba laptop running <span class="italic">Windows Vista SP1</span>,
+                        <p class="drop-cap"> My journey as an IT student started when I was roughly 8 years old. I had an ancient Toshiba laptop running <span class="italic">Windows Vista SP1</span>,
                             if anyone remembers that mess of an operating system. So, my first experience installing software and tinkering with the various menus and buttons Windows 
                             machines have was largely extended. I might have tried playing a game like Minecraft on my computer, and there would be issues with the installation.
                             As frustrating as that was, I learned how to retrace my steps and understand where things went wrong.
@@ -57,9 +57,9 @@
                             <img src="resources/images/main/portrait-photo.jpg" alt="Portrait Photo">
                         </div>
                         <div id="about-nav">
-                            <div id="about-me" class="clippable">
+                            <div id="about-me" class="scrollable">
                                 <h4>About Me</h4>
-                                <p> I am an Information Technology student at the University of Massachusetts Boston with a concentration in System Administration. My study is within the
+                                <p class="drop-cap"> I am an Information Technology student at the University of Massachusetts Boston with a concentration in System Administration. My study is within the
                                     College of Science and Mathematics.
                                 </p>
                                 <p> Over the years, I grew fond of anything relating to computing, whether that be hardware, software, programming, network infrastructure, 
