--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
         <p class="hidden" id="#start-content">Beginning of Content</p>
         <div id="outer-div">
             <div id="left-div"> <!-- This container has the links for further reading and certifications sections, or everything to the left of my resume, in it. -->
-                <div id="other-links" class="clippable">
+                <div id="other-links" class="scrollable">
                     <h4>Links for Futher Reading</h4>
                     <p>Professional Experience</p>
                     <ul>
@@ -56,7 +56,7 @@
                 <embed src="resources/downloadables/rsmaller-resume.pdf"> <!-- Embed element cited from https://stackoverflow.com/questions/17784037/how-to-display-pdf-file-in-html -->
             </div>
             <div id="right-div"> <!-- This container has my comments section and the navbar, or everything to the right of my resume, in it.-->
-                <div id="comments" class="clippable">
+                <div id="comments" class="scrollable">
                     <p> I am fortunate to have to many different experiences in high school and college under my belt.</p>
                     <p> In high school, I learned computer hardware, Cisco IOS networking, computer repair, some Linux configurations, and so much more.</p>
                     <p> College allowed me to build on that. I took more classes about Linux and system administration. At the same time, I took two Python 
