--- a/mission.html
+++ b/mission.html
@@ -26,8 +26,8 @@
         <div id="outer-div">
             <div id="left-main-div"> <!-- Contains the video embed, ethical background, and what I stand for sections. -->
                 <div id="left-top-div"> <!-- Contains the top two elements: ethical background and the video embed. -->
-                    <div id="ethical-bg" class="clippable">
-                        <p> My ethical background is very diverse. There are a lot of different factors which affect my global perspective and work ethic.
+                    <div id="ethical-bg" class="scrollable">
+                        <p class="drop-cap"> As a passionate IT student, my ethical background is very diverse. There are a lot of different factors which affect my global perspective and work ethic.
                         </p>
                         <p> My IT career started when I was a curious high schooler, for example. There are lots of things a high schooler might be curious 
                             about doing with technology and server equipment, even if it is not the best idea. I learned this lesson very quickly when I 
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div id="beliefs" class="scrollable">
-                    <p> My work ethic and my moral compass are somewhat nuanced, so I wanted to dedicate this section to that specifically. Firstly, I believe 
+                    <p class="drop-cap"> One's work ethic and my moral compass can be nuanced, so I wanted to dedicate this section to that specifically. Firstly, I believe 
                         there are many different ways to solve a problem. For example, one way to set up an IP addressing scheme is to configure a DHCP, or 
                         Dynamic Host Configuration Protocol, server. Another way to do the same thing is to set up static addressing on a network. It is very 
                         common to have some devices configure their IP addresses via DHCP and have others get static addresses. While there are multiple ways to
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div id="right-main-div"> <!-- Contains the ACM Code, System Administration book, and navbar sections. -->
-                <div id="acm-code" class="clippable">
+                <div id="acm-code" class="scrollable">
                     <p> One page which I use as reference for any ethical questions or concerns I might have is the <a>Association of Computing and Machinery Code of Ethics</a>.
                         Below is a list of their general guidelines which I find important:    
                     </p>
@@ -119,7 +119,7 @@
                         </li>
                     </ol>
                 </div>
-                <div id="sysadmin-book" class="clippable">
+                <div id="sysadmin-book" class="scrollable">
                     <p> Another ethical reference I have at my disposal is a book I adore &mdash; 
                         <a class="link" href="https://the-sysadmin-book.com/" target="_blank"><span class="italic">The Practice of System and Network Administration</span> &ndash; Third Edition</a> 
                         by Thomas Limoncelli, Christina Hoagan, and Strata Chalup. This book has a lot of different sections on handling different situations effectively, like 
