Updated collage resources to PNG images for text quality preservation

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
                             <p class="hidden" id="#start-content">Content After Navigation Bar</p>
                         </div>
                     </div>
-                    <div id="collage" class="clippable">
+                    <div id="collage" class="scrollable">
                         <h4 class="white">Collage</h4>
                         <!-- Unspecified height is intentional; collage images will dynamically resize with viewport while maintaining the correct aspect ratio. -->
-                        <img src="resources/images/collage/collage1.jpg" width="600" alt="Screenshot of Graphical Subnetter"> 
-                        <img src="resources/images/collage/collage2.jpg" width="300" alt="One of My Packet Tracer Projects">
-                        <img src="resources/images/collage/collage3.jpg" width="300" alt="Python Version Control Script I Used Before Git">
-                        <img src="resources/images/collage/collage4.jpg" width="310" alt="My Current Linux Desktop Configuration">
-                        <img src="resources/images/collage/collage5.jpg" width="290" alt="An Ubuntu Virtual Machine I Customized">
+                        <img src="resources/images/collage/collage1.png" width="595" alt="Screenshot of Graphical Subnetter"> 
+                        <img src="resources/images/collage/collage2.png" width="300" alt="One of My Packet Tracer Projects">
+                        <img src="resources/images/collage/collage3.png" width="290" alt="Screenshot of my Graphical Subnetter's Export Function">
+                        <img src="resources/images/collage/collage4.png" width="300" alt="My Current Linux Desktop Configuration">
+                        <img src="resources/images/collage/collage5.png" width="290" alt="An Ubuntu Virtual Machine I Customized">
                     </div>
                 </div>
                 <footer id="footer-nav">
