Updated some links in index page and portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                     </p>
                     <div class="portfolio-image-container" id="subnettergui-image-container"></div> <!-- All portfolio images are 587x320, the max resolution they should appear in 1080p fullscreen. -->
                     <p class="clippable">A graphical subnetting calculator and studying tool for IT students who want to learn about subnetting, classful addressing, or IPv6.</p>
-                    <a target="_blank" href="https://github.com/rsmaller/subnettergui" class="link clippable"><p class="portfolio-link">Access SubnetterGui.</p></a>
+                    <a target="_blank" href="https://github.com/rsmaller/subnettergui" class="button-link link clippable"><p class="portfolio-link">Access SubnetterGui.</p></a>
                 </div>
                 <div class="portfolio-unit" id="hashlet">
                     <p class="clippable portfolio-name-header">
@@ -44,7 +44,7 @@
                     </p>
                     <div class="portfolio-image-container" id="hashlet-image-container"></div>
                     <p class="clippable">A CLI script for generating pseudo-hashes or pseudo-checksums for demonstration purposes.</p>
-                    <a target="_blank" href="resources/downloadables/hashlet.py" class="link clippable" download><p class="portfolio-link">Access Hashlet.</p></a> <!-- Download link attribute cited from www.w3schools.com/howto/howto_html_download_link.asp -->
+                    <a target="_blank" href="resources/downloadables/hashlet.py" class="button-link link clippable" download><p class="portfolio-link">Access Hashlet.</p></a> <!-- Download link attribute cited from www.w3schools.com/howto/howto_html_download_link.asp -->
                 </div>
             </div>
             <div class="vertical-div">
@@ -56,7 +56,7 @@
                     </p>
                     <div class="portfolio-image-container" id="subnetter-image-container"></div>
                     <p class="clippable">A CLI-based subnet calculator written in C.</p>
-                    <a target="_blank" href="https://github.com/rsmaller/subnetter" class="link clippable"><p class="portfolio-link">Access Subnetter.</p></a>
+                    <a target="_blank" href="https://github.com/rsmaller/subnetter" class="button-link link clippable"><p class="portfolio-link">Access Subnetter.</p></a>
                 </div>
                 <div class="portfolio-unit" id="cryptik">
                     <p  class="clippable portfolio-name-header">
@@ -66,7 +66,7 @@
                     </p>
                     <div class="portfolio-image-container" id="cryptik-image-container"></div>
                     <p class="clippable">A CLI script for encoding and decoding Vigen&#232;re-ciphered text with a key.</p>
-                    <a target="_blank" href="resources/downloadables/cryptik.py" class="link clippable" download><p class="portfolio-link">Access Cryptik.</p></a>
+                    <a target="_blank" href="resources/downloadables/cryptik.py" class="button-link link clippable" download><p class="portfolio-link">Access Cryptik.</p></a>
                 </div>
             </div>
             <div class="vertical-div">
@@ -78,7 +78,7 @@
                     </p>
                     <div class="portfolio-image-container" id="subnetterplusplus-image-container"></div>
                     <p class="clippable">A more robust version of the C CLI-based subnet calculator, re-written in C++.</p>
-                    <a target="_blank" href="https://github.com/rsmaller/subnetterplusplus" class="link clippable"><p class="portfolio-link">Access Subnetter++.</p></a>
+                    <a target="_blank" href="https://github.com/rsmaller/subnetterplusplus" class="button-link link clippable"><p class="portfolio-link">Access Subnetter++.</p></a>
                 </div>
                 <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p> <!-- There is nothing after navigation. Wraps around to start. -->
                 <nav id="navbar"  class="clippable">
