--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="styles/index_styles.css" rel="stylesheet">
         <link href="styles/links_styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bitter" rel="stylesheet">
-        <link rel="shortcut icon" href="resources/images/icons/html5-icon.png">
+        <link href="resources/images/icons/html5-icon.png" rel="shortcut icon">
         <title>Ryan Smaller - IT B.S.</title>
     </head>
     <body>
@@ -59,7 +59,8 @@
                         <div id="about-nav">
                             <div id="about-me" class="scrollable">
                                 <h4>About Me</h4>
-                                <p class="drop-cap"> I am an Information Technology student at the University of Massachusetts Boston with a concentration in System Administration. My study is within the
+                                <p class="drop-cap"> I am an Information Technology student at the <a class="link" href="https://www.umb.edu/" target="_blank">University of Massachusetts Boston</a> with a concentration in 
+                                    <a class="link" href="https://www.cs.umb.edu/it_bs#a1" target="_blank">System Administration</a>. My study is within the
                                     College of Science and Mathematics.
                                 </p>
                                 <p> Over the years, I grew fond of anything relating to computing, whether that be hardware, software, programming, network infrastructure, 
@@ -79,11 +80,11 @@
                     <div id="collage" class="scrollable">
                         <h4 class="white">Collage</h4>
                         <!-- Unspecified height is intentional; collage images will dynamically resize with viewport while maintaining the correct aspect ratio. -->
-                        <img src="resources/images/collage/collage1.png" width="595" alt="Screenshot of Graphical Subnetter"> 
-                        <img src="resources/images/collage/collage2.png" width="300" alt="One of My Packet Tracer Projects">
-                        <img src="resources/images/collage/collage3.png" width="290" alt="Screenshot of my Graphical Subnetter's Export Function">
-                        <img src="resources/images/collage/collage4.png" width="300" alt="My Current Linux Desktop Configuration">
-                        <img src="resources/images/collage/collage5.png" width="290" alt="An Ubuntu Virtual Machine I Customized">
+                        <a class="link" href="https://github.com/rsmaller/subnettergui" target="_blank"><img src="resources/images/collage/collage1.png" width="595" alt="Screenshot of Graphical Subnetter"></a>
+                        <a class="link" href="https://www.netacad.com/cisco-packet-tracer" target="_blank"><img src="resources/images/collage/collage2.png" width="300" alt="One of My Packet Tracer Projects"></a>
+                        <a class="link" href="https://github.com/rsmaller/subnettergui" target="_blank"><img src="resources/images/collage/collage3.png" width="290" alt="Screenshot of my Graphical Subnetter's Export Function"></a>
+                        <a class="link" href="https://system76.com/pop/" target="_blank"><img src="resources/images/collage/collage4.png" width="300" alt="My Current Linux Desktop Configuration (Pop!_OS)"></a>
+                        <a class="link" href="https://ubuntu.com/" target="_blank"><img src="resources/images/collage/collage5.png" width="290" alt="An Ubuntu Virtual Machine I Customized"></a>
                     </div>
                 </div>
                 <footer id="footer-nav">
