--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <link href="styles/links_styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bitter" rel="stylesheet">
         <link rel="shortcut icon" href="resources/images/icons/html5-icon.png">
-        <title>Cover Page</title>
+        <title>Contact Me</title>
     </head>
     <body>
             <header>
