Made major strides in dealing with flexbox bugs

--- a/resume.html
+++ b/resume.html
@@ -31,8 +31,8 @@
                     </ul>
                     <p>Academics</p>
                     <ul>
-                        <li><a href="https://www.bluehills.org/" target="_blank" class="link">Blue Hills Regional Technical School</a> (<a href="https://www.bluehills.org/tech-programs/computer-information-systems" target="_blank" class="link">CIS</a>)</li>
-                        <li><a href="https://www.umb.edu/" target="_blank" class="link">University of Massachusetts Boston</a> (<a href="https://www.cs.umb.edu/it_bs" target="_blank" class="link">IT B.S.</a>)</li>
+                        <li><a href="https://www.bluehills.org/" target="_blank" class="link">Blue Hills Regional Technical School</a> &#40;<a href="https://www.bluehills.org/tech-programs/computer-information-systems" target="_blank" class="link">CIS</a>&#41;</li>
+                        <li><a href="https://www.umb.edu/" target="_blank" class="link">University of Massachusetts Boston</a> &#40;<a href="https://www.cs.umb.edu/it_bs" target="_blank" class="link">IT B.S.</a>&#41;</li>
                     </ul>
                     <p>Awards and Recognitions</p>
                     <ul>
