--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                         <p> While speaking over the phone or via VoIP is great, I do not generally prefer communicating this way; my availability over text is much larger 
                             because I can quickly respond to questions or concerns.</p>
 
-                        <p> I use different messaging applications for different things. Texting my mobile phone number (<a href="tel:+06176534628" class="bold link">617&dash;653&dash;4628</a>) is an option for quickly getting in touch with me about anything
+                        <p> I use different messaging applications for different things. Texting my mobile phone number &#40;<a href="tel:+06176534628" class="bold link">617&dash;653&dash;4628</a>&#41; is an option for quickly getting in touch with me about anything
                             non-exhaustive.
                         </p>
 
@@ -103,7 +103,7 @@
                                             <img src="resources/images/icons/gmail-icon-grayscale.png" class="inlined-image-container" width="25" height="19" alt="Gmail Icon">
                                         </a> Email
                                     </td>
-                                    <td><a href="mailto:rsmaller147@gmail.com" class="force-no-decoration link">rsmaller147@gmail.com</a> (Business) or <a href="mailto:ryan.smaller001@umb.edu" class="force-no-decoration link">ryan.smaller001@umb.edu</a> (School)</td> <!-- "mailto:" sourced from https://support.google.com/accounts/thread/177631749/how-do-i-get-the-url-link-of-my-email-address?hl=en -->
+                                    <td><a href="mailto:rsmaller147@gmail.com" class="force-no-decoration link">rsmaller147@gmail.com</a> &#40;Business&#41; or <a href="mailto:ryan.smaller001@umb.edu" class="force-no-decoration link">ryan.smaller001@umb.edu</a> &#40;School&#41;</td> <!-- "mailto:" sourced from https://support.google.com/accounts/thread/177631749/how-do-i-get-the-url-link-of-my-email-address?hl=en -->
                                 </tr>
                                 <tr>
                                     <td>
@@ -133,7 +133,7 @@
                             <a href="mission.html" target="_self"><p>What I Stand For</p></a>
                         </nav>
                         <p class="hidden" id="#start-content">Content After Navigation Bar</p>
-                        <div id="availability-container" class="clippable">
+                        <div id="availability-container" class="scrollable">
                             <p>Feel free to send me a message any time! If it is necessary to speak with me, this is my current general availability:</p>
                             <ul id="availability-list"> <!-- Whitespace character references from https://stackoverflow.com/questions/8515365/are-there-other-whitespace-codes-like-nbsp-for-half-spaces-em-spaces-en-space -->
                                 <li>Sunday:&emsp;&emsp;&ensp;&nbsp;Unavailable</li>
