Bug fixed some sizing issues with viewports and added scrollbars to other necessary content

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             </header>
             <div id="outer-div"> <!-- This element, as well as the vertical elements, are used for flex positioning all the sub-container divs in this document. -->
                 <div id="telephone-messaging-vertical">
-                    <div id="telephone" class="text-block clippable">
+                    <div id="telephone" class="text-block scrollable">
                         <p> The best way to call me is unfortunately not via my phone number because there is an issue with my voicemail carrier for calls at the moment.
                             However, should calling be necessary, my mobile phone number is <a href="tel:+06176534628" class="bold link">617&dash;653&dash;4628</a>.</p> <!-- Telephone link href sourced from: https://www.w3docs.com/snippets/html/how-to-add-telephone-links-with-html.html -->
 
@@ -40,7 +40,7 @@
 
                         <p> Any pertinent information not in this block for speaking to me is in the right side table on this page. Feel free to reach out to me with any questions or concerns!</p>
                     </div>
-                    <div id="messaging" class="text-block clippable">
+                    <div id="messaging" class="text-block scrollable">
                         <p> While speaking over the phone or via VoIP is great, I do not generally prefer communicating this way; my availability over text is much larger 
                             because I can quickly respond to questions or concerns.</p>
 
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div id="other-nav-vertical"> <!-- The container for vertically flexing the accounts table, navbar, and availability sections. -->
-                    <div id="other-accounts">
+                    <div id="other-accounts" class="scrollable">
                         <table id="other-accounts-table">
                             <colgroup>
                                 <col id="accounts-table-column">
