--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
                         <li><a href="https://www.skillsusa.org/competitions/skillsusa-championships/categories-and-descriptions/" target="_blank" class="link">SkillsUSA</a></li>
                     </ul>
                 </div>
-                <div id="certifications" class="clippable">
+                <div id="certifications" class="scrollable">
                     <h4>Certifications</h4>
                     <a href="https://www.comptia.org/certifications/a" class="link" target="_blank"><img src="resources/images/certifications/aplus-icon.svg" width="100" height="100" alt="A+ Certification"></a>
                     <a href="https://meta.extremenetworks.com/e_certifications/extreme-networks-sales-specialist/" class="link" target="_blank"><img src="resources/images/certifications/ess-icon.png" alt="Extreme Networks Sales Specialist: Cloud Computing Certification"></a>    
@@ -57,6 +57,7 @@
             </div>
             <div id="right-div"> <!-- This container has my comments section and the navbar, or everything to the right of my resume, in it.-->
                 <div id="comments" class="scrollable">
+                    <h4>Other Credentials</h4>
                     <p> I am fortunate to have to many different experiences in high school and college under my belt.</p>
                     <p> In high school, I learned computer hardware, Cisco IOS networking, computer repair, some Linux configurations, and so much more.</p>
                     <p> College allowed me to build on that. I took more classes about Linux and system administration. At the same time, I took two Python 
