Quick bug fix for navigation bar buttons overflowing

--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                     </div>
                     <div id="availability-nav-horizontal"> <!-- The container for horizontally flexing the navbar and availability sections. -->
                         <p class="hidden"><a href="#start-content">Skip Navigation</a></p>
-                        <nav id="navbar">
+                        <nav id="navbar" class="clippable">
                             <a href="index.html" target="_self"><p>Back to Cover Page</p></a>
                             <a href="portfolio.html" target="_self"><p>Portfolio</p></a>
                             <a href="resume.html" target="_self"><p>Resume</p></a>
