--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <footer id="footer-nav" class="button-link link">
-                    <a href="contact.html" class="button-link link force-no-decoration" target="_self"><h1>Contact Me</h1></a>
+                    <a href="contact.html" class="link force-no-decoration" target="_self"><h1>Contact Me</h1></a>
                 </footer>
             </div>
     </body>
