Bug fixed a margin issue with mission navbar

--- a/mission.html
+++ b/mission.html
@@ -43,7 +43,7 @@
                             out by causing severe damage to IT infrastructure. In short, it is imperative to me that I show I am trustworthy.
                         </p>
                     </div>
-                    <div id="video-embed" class="clippable">
+                    <div id="video-embed" class="scrollable">
                         <iframe class="clippable" width="588" height="331" src="https://www.youtube.com/embed/nu9xL0-F7wA?si=Y7bYw3C0Bvzr9S2O" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <p>Bad things happen when ethical guidelines are not followed. In the above video, Stack Overflow did unethical things with their users' data.</p>
                     </div>
