Updated navbars to use flexboxes instead of guessing their size

--- a/contact.html
+++ b/contact.html
@@ -127,10 +127,10 @@
                     <div id="availability-nav-horizontal"> <!-- The container for horizontally flexing the navbar and availability sections. -->
                         <p class="hidden"><a href="#start-content">Skip Navigation</a></p>
                         <nav id="navbar" class="clippable">
-                            <a href="index.html" target="_self"><p>Back to Cover Page</p></a>
-                            <a href="portfolio.html" target="_self"><p>Portfolio</p></a>
-                            <a href="resume.html" target="_self"><p>Resume</p></a>
-                            <a href="mission.html" target="_self"><p>What I Stand For</p></a>
+                            <a href="index.html" target="_self" class="clippable"><p>Back to Cover Page</p></a>
+                            <a href="portfolio.html" target="_self" class="clippable"><p>Portfolio</p></a>
+                            <a href="resume.html" target="_self" class="clippable"><p>Resume</p></a>
+                            <a href="mission.html" target="_self" class="clippable"><p>What I Stand For</p></a>
                         </nav>
                         <p class="hidden" id="#start-content">Content After Navigation Bar</p>
                         <div id="availability-container" class="scrollable">
