--- a/mission.html
+++ b/mission.html
@@ -132,10 +132,10 @@
                 </div>
                 <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p> <!-- There is nothing after the navigation bar here, so go back to the start. -->
                 <nav id="navbar" class="clippable">
-                    <a href="index.html" target="_self"><p>Back to Cover Page</p></a>
-                    <a href="portfolio.html" target="_self"><p>Portfolio</p></a>
-                    <a href="resume.html" target="_self"><p>Resume</p></a>
-                    <a href="contact.html" target="_self"><p>Contact Me</p></a>
+                    <a href="index.html" target="_self" class="clippable"><p>Back to Cover Page</p></a>
+                    <a href="portfolio.html" target="_self" class="clippable"><p>Portfolio</p></a>
+                    <a href="resume.html" target="_self" class="clippable"><p>Resume</p></a>
+                    <a href="contact.html" target="_self" class="clippable"><p>Contact Me</p></a>
                 </nav>
             </div>
         </div>
