Fixed major bugs regarding mobile viewports

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
             <div id="body-footer-div"> <!-- The outer container which currently contains the entire body; this element is not currently -->
-                <header>
+                <header class="clippable">
                     <h1>Ryan Smaller - IT B.S.</h1>
                 </header>
                 <div id="body-div"> <!-- Everything minus the header and footer; those are excluded to prevent them from being flexed in unusual fashion. -->
