--- a/mission.html
+++ b/mission.html
@@ -20,12 +20,12 @@
     </head>
     <body>
         <p class="hidden" id="#start-content">Beginning of Content</p>
-        <header>
+        <header class="clippable">
             <h1>What I Stand For</h1>
         </header>
         <div id="outer-div">
-            <div id="left-main-div"> <!-- Contains the video embed, ethical background, and what I stand for sections. -->
-                <div id="left-top-div"> <!-- Contains the top two elements: ethical background and the video embed. -->
+            <div id="left-main-div" class="clippable"> <!-- Contains the video embed, ethical background, and what I stand for sections. -->
+                <div id="left-top-div" class="clippable"> <!-- Contains the top two elements: ethical background and the video embed. -->
                     <div id="ethical-bg" class="scrollable">
                         <p class="drop-cap"> As a passionate IT student, my ethical background is very diverse. There are a lot of different factors which affect my global perspective and work ethic.
                         </p>
@@ -76,7 +76,7 @@
                     </p>
                 </div>
             </div>
-            <div id="right-main-div"> <!-- Contains the ACM Code, System Administration book, and navbar sections. -->
+            <div id="right-main-div" class="clippable"> <!-- Contains the ACM Code, System Administration book, and navbar sections. -->
                 <div id="acm-code" class="scrollable">
                     <p> One page which I use as reference for any ethical questions or concerns I might have is the <a>Association of Computing and Machinery Code of Ethics</a>.
                         Below is a list of their general guidelines which I find important:    
