--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width height=device-height">
         <script src="scripts/modernizr.custom.62074.js"></script>
+        <script src="scripts/embed_checker.js"></script>
         <link href="styles/general_styles.css" rel="stylesheet">
         <link href="styles/resume_styles.css" rel="stylesheet">
         <link href="styles/links_styles.css" rel="stylesheet">
@@ -53,7 +54,8 @@
                 </div>
             </div>
             <div id="resume-file"> <!-- A PDF of my resume is embedded into this div container and takes up the entire div's space. -->
-                <embed src="resources/downloadables/rsmaller-resume.pdf"> <!-- Embed element cited from https://stackoverflow.com/questions/17784037/how-to-display-pdf-file-in-html -->
+                <embed id="resume-embed" src="resources/downloadables/rsmaller-resume.pdf"> <!-- Embed element cited from https://stackoverflow.com/questions/17784037/how-to-display-pdf-file-in-html -->
+                <p id="unsupported-embed-message" class="hidden">Non-HTML embeds are not supported on this browser. Click <a class="link" href="resources/downloadables/rsmaller-resume.pdf" download>here</a> to download the PDF of my resume.</p>
             </div>
             <div id="right-div"> <!-- This container has my comments section and the navbar, or everything to the right of my resume, in it.-->
                 <div id="comments" class="scrollable">
