Updated incompatible PDF viewer message

--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
             </div>
             <div id="resume-file"> <!-- A PDF of my resume is embedded into this div container and takes up the entire div's space. -->
                 <embed id="resume-embed" src="resources/downloadables/rsmaller-resume.pdf"> <!-- Embed element cited from https://stackoverflow.com/questions/17784037/how-to-display-pdf-file-in-html -->
-                <p id="unsupported-embed-message" class="hidden">Non-HTML embeds are not supported on this browser. Click <a class="link" href="resources/downloadables/rsmaller-resume.pdf" download>here</a> to download the PDF of my resume.</p>
+                <p id="unsupported-embed-message" class="hidden">PDF previews are not supported on this browser. Click <a class="link" href="resources/downloadables/rsmaller-resume.pdf" download>here</a> to download the PDF of my resume.</p>
             </div>
             <div id="right-div"> <!-- This container has my comments section and the navbar, or everything to the right of my resume, in it.-->
                 <div id="comments" class="scrollable">
